[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hosts-manager"
version = "0.1.0"
description = "A cross-platform CLI tool to manage system hosts file entries."
authors = [
    { name = "Prateek", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
hostctl = "hosts_manager.app.cli:app"

#[tool.setuptools.packages.find]
#where = ["app"]
